# 2020-sensor-miniproject

./: .gitignore  Git.md  MANIFEST.in  Python.md  README.md  Readme.md  analyze.m  analyze.py  setup.cfg  ws_client.py  ws_server.py
.github/workflows/: ci.yml
matlab/: analyze.m  load_data.m  plot_time.m
src/sp_iotsim/: __init__.py  client.py  config.ini  fileio.py  server.py
src/sp_iotsim/tests/: conftest.py  test_all.py  test_ini.py
