[metadata]
name = sp_iotsim
version = 1.1.0
author = Michael Hirsch
author_email = scivision@noreply.users.github.com
url = https://github.com/BostonUniversitySeniorDesign/2020-hardware-miniproject
description = IoT simulation using WebSockets
keywords =
  websockets
  asyncio
  concurrent
classifiers =
  Environment :: Console
  Environment :: Web Environment
  Framework :: AsyncIO
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: System :: Networking
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
zip_safe = False
packages = find:
install_requires =
  websockets
  scipy
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
all =
  pandas
  matplotlib
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
