[metadata]
name = sp_iotsim
version = 1.2.0
author = Michael Hirsch
author_email = scivision@noreply.users.github.com
url = https://github.com/BostonUniversitySeniorDesign/2020-hardware-miniproject
description = IoT simulation using WebSockets
keywords =
  websockets
  asyncio
  concurrent
classifiers =
  Environment :: Console
  Environment :: Web Environment
  Framework :: AsyncIO
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: System :: Networking
license_files =
  LICENSE.txt
long_description = file: Readme.md

[options]
python_requires = >= 3.7
zip_safe = False
packages = find:
install_requires =
  websockets
  scipy
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
all =
  pandas
  matplotlib
tests =
  pytest
  pytest-timeout
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
